# Sports-Analysts-

./: .env.example  .gitignore  PACKAGING.md  README.md  _sportedge_setup.bat  build_exe.bat  launch.bat  launch_dashboard.bat  launch_paper_trade.bat  launch_ui.bat  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: DESIGN.md  NBA_DATA_SOURCES.md
scripts/: build_aligned_replays.py  discover_polymarket_markets.py  enrich_training_with_nocturne.py  evaluate_replay.py  fetch_historical.py  fetch_polymarket_prices.py  import_kaggle_nba.py  import_nocturne_nba.py  license_tool.py  paper_report.py  paper_sim.py  probe_api_sports.py  proving_status.py  replay_paper.py  run_backtest.py  run_finals_market_backtest.py  run_market_backtest.py  scan_kalshi_games.py  train_evaluate_captured.py
src/sportedge/: __init__.py  app.py  config.py  licensing.py  proving.py  (+1 more)
tests/: test_api_sports.py  test_backtest.py  test_captured.py  test_edge.py  test_espn_live.py  test_espn_scraper.py  test_execution_policy.py  test_flow.py  test_history.py  test_isports.py  test_kaggle_nba.py  test_kalshi.py  test_licensing.py  test_live_executor.py  test_live_loop.py  test_market_align.py  test_market_scanner.py  test_metrics.py  test_nocturne_nba.py  test_paper.py  test_paper_report.py  test_pnl.py  test_polymarket.py  test_proving.py  test_reconcile.py  test_replay.py  test_risk.py  test_soccer_backtest.py  test_soccer_calibrate.py  test_soccer_loop.py  test_soccer_winprob.py  test_sportsblaze.py  test_strategy.py  test_train.py  test_web_dashboard.py  test_winprob.py
(+46 files in other folders)
